fixing hound violations, primarily in CSS spacing

--- a/app/assets/stylesheets/_colors.scss
+++ b/app/assets/stylesheets/_colors.scss
@@ -1,3 +1,3 @@
-$yellow: #F0B012;
+$yellow: #f0b012;
 $background-black: #020212;
 $header-blue: #262432;
